@@ -1,6 +1,8 @@
-$Id: ChangeLog,v 1.193 2005-12-06 09:46:09 peterlin Exp $
+$Id: ChangeLog,v 1.194 2005-12-06 10:52:07 peterlin Exp $
 
 2005-12-06  Primoz Peterlin  <primoz.peterlin@biofiz.mf.uni-lj.si>
+
+	* Makefile: clean also signature files.
 
 	* sfd/FreeMonoBoldOblique.sfd, sfd/FreeMonoBold.sfd: cosmetic
 	changes; cleaning background of referenced composed characters.
